@@ -1,3 +1,3 @@
 #maven.buildNumber.plugin properties file
-#Wed Sep 10 10:57:00 CEST 2014
-buildNumber0=3492
+#Thu Sep 11 12:57:18 CEST 2014
+buildNumber0=3495
