@@ -20,3 +20,4 @@ Added --no-comparators option to genetic algorithm
 Added --original=N option to genetic algorithm
 Added ConfigLoader.loadFromString
 Added --incomplete-data option to genetic algorithm
+Added support for incremental record linkage (plus 1.3 methods)
